
  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------


2005/04/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_PluginManager_LoadPlugin() now uses lowercased module names when
  loading


2005/04/13: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added flags for GWEN_Directory_GetPath()
  - GWEN_DIR_FLAGS_PUBLIC_PATH
  - GWEN_DIR_FLAGS_PUBLIC_NAME
- added function GWEN_Directory_CreatePublic()


2005/04/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added "/sw" prefix when searching for Gwen (used by Fink on MacOSX)


2005/04/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- merged in Herbert's InetSocket corrections for Gwen (thanks a lot!!)


===========================================================================
MARK: released gwenhywfar-1.11.0 (2005/04/08)
===========================================================================


2005/04/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a copy'n paste bug in netconnectionssl.c (only effected WIN32)


2005/04/05: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added variable "ignoreLines" to CSV plugin. This can be used to skip
  garbage at the beginning of a CSV file


2005-04-04   Christian Stimming <stimming@tuhh.de>

	* src/base/plugin.h: Add PluginManager_GetPaths to enable access
	to the search paths from the outside. Necessary for aqhbci's
	mediumprovider.


2005/04/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a memory leak in typemaker generated code (spotted by Andreas Degert)

